docs/requirements/v1.0.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a registry user, I want to ingest supplemental metadata from Product_Metadata_Supplemental. ([#12](https://github.com/NASA-PDS/pds-registry-app/issues/12)) 


This requirement is not impacted by the current version
## As a user, I want Harvest to be deployable as a service ([#14](https://github.com/NASA-PDS/pds-registry-app/issues/14)) 


This requirement is not impacted by the current version
## The service shall accept artifact registrations. ([#57](https://github.com/NASA-PDS/pds-registry-app/issues/57)) 


This requirement is not impacted by the current version
## The service shall provide a means identifying relationships between artifact registrations ([#58](https://github.com/NASA-PDS/pds-registry-app/issues/58)) 


This requirement is not impacted by the current version
## The service shall maintain configuration regarding the classes of artifacts to be registered ([#59](https://github.com/NASA-PDS/pds-registry-app/issues/59)) 


This requirement is not impacted by the current version
## The service shall assign a global unique identifier to a registered artifact ([#56](https://github.com/NASA-PDS/pds-registry-app/issues/56)) 


This requirement is not impacted by the current version
## The service shall allow for queries for registered artifacts ([#55](https://github.com/NASA-PDS/pds-registry-app/issues/55)) 


This requirement is not impacted by the current version
## The service shall provide a staging capability for artifacts staged for release ([#65](https://github.com/NASA-PDS/pds-registry-app/issues/65)) 


This requirement is not impacted by the current version
## The service should be scalable to enable publishing and management of up to 100 million registrations ([#54](https://github.com/NASA-PDS/pds-registry-app/issues/54)) 


This requirement is not impacted by the current version
## As a node operator, I want the ability to rollback to a previous version of the registry ([#32](https://github.com/NASA-PDS/pds-registry-app/issues/32)) 


This requirement is not impacted by the current version
## As a node operator, I want to harvest and ingest a subset of a bundle based on existing registered data. ([#130](https://github.com/NASA-PDS/pds-registry-app/issues/130)) 


This requirement is not impacted by the current version
## As a user, I want to run one tool to parse the archive and push to the registry. ([#139](https://github.com/NASA-PDS/pds-registry-app/issues/139)) 


This requirement is not impacted by the current version
## As a manager, I want a cost model for deploying a registry + API in AWS ([#141](https://github.com/NASA-PDS/pds-registry-app/issues/141)) 


This requirement is not impacted by the current version
## As a node operator, I want actionable, user-friendly error messages for registry schema failures ([#142](https://github.com/NASA-PDS/pds-registry-app/issues/142)) 


This requirement is not impacted by the current version
## As a node operator, I want to ingest metadata regarding secondary products that belong to a collection. ([#143](https://github.com/NASA-PDS/pds-registry-app/issues/143)) 


This requirement is not impacted by the current version
## As a node operator, I want to ingest metadata regarding secondary collections that belong to a bundle. ([#144](https://github.com/NASA-PDS/pds-registry-app/issues/144)) 


This requirement is not impacted by the current version
## As a developer, I want to include supplemental file data sizes in the registry ([#145](https://github.com/NASA-PDS/pds-registry-app/issues/145)) 


This requirement is not impacted by the current version
## As a node operator, I want the the registry schema to update autonomously when new data is ingested. ([#146](https://github.com/NASA-PDS/pds-registry-app/issues/146)) 


This requirement is not impacted by the current version
## As a node operator,  I want to be able to tag ingested data with the node it is ingested by. ([#147](https://github.com/NASA-PDS/pds-registry-app/issues/147)) 


This requirement is not impacted by the current version
## As a developer, I want to extend the registry-mgr and harvest using the Java API ([#153](https://github.com/NASA-PDS/pds-registry-app/issues/153)) 


This requirement is not impacted by the current version
## As a manager, I want the registry to have regression tests included in CI ([#154](https://github.com/NASA-PDS/pds-registry-app/issues/154)) 


This requirement is not impacted by the current version
## As a user, I want to uninstall the Registry and all its components ([#156](https://github.com/NASA-PDS/pds-registry-app/issues/156)) 


This requirement is not impacted by the current version
## As a user, I want to upgrade the Registry and all its components ([#157](https://github.com/NASA-PDS/pds-registry-app/issues/157)) 


This requirement is not impacted by the current version
## As a node operator, I want to tag product ancestry relationships after products have been ingested individually ([#162](https://github.com/NASA-PDS/pds-registry-app/issues/162)) 


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from a MySQL database ([#174](https://github.com/NASA-PDS/pds-registry-app/issues/174)) 


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from a CSV that is not archive data ([#175](https://github.com/NASA-PDS/pds-registry-app/issues/175)) 


This requirement is not impacted by the current version
## As a registry user, I want to ingest supplemental metadata from external data sources ([#176](https://github.com/NASA-PDS/pds-registry-app/issues/176)) 


This requirement is not impacted by the current version
## As a user, I want the registry app components to be able to ingest data sets containing 1+ million products ([#179](https://github.com/NASA-PDS/pds-registry-app/issues/179)) 


This requirement is not impacted by the current version
## Reingest data in AWS registry with configuration adjusted for file reference url ([#180](https://github.com/NASA-PDS/pds-registry-app/issues/180)) 


This requirement is not impacted by the current version
## As a user, I want to know the version of all registry app components via the command-line ([#185](https://github.com/NASA-PDS/pds-registry-app/issues/185)) 


This requirement is not impacted by the current version
## As a developer, I want to deploy the registry with a single docker-compose command ([#186](https://github.com/NASA-PDS/pds-registry-app/issues/186)) 


This requirement is not impacted by the current version
## As a developer, I want to be able to access the registry related docker images from https://hub.docker.com/ ([#187](https://github.com/NASA-PDS/pds-registry-app/issues/187)) 


This requirement is not impacted by the current version
## As a user, I want to ingest legacy PDS3 data sets ([#192](https://github.com/NASA-PDS/pds-registry-app/issues/192)) 


This requirement is not impacted by the current version
## As a user, I want big data ingestion tools packaged and dockerized together ([#200](https://github.com/NASA-PDS/pds-registry-app/issues/200)) 


This requirement is not impacted by the current version
## As a user, I want to be able to ingest a set of files specified in a file listing ([#201](https://github.com/NASA-PDS/pds-registry-app/issues/201)) 


This requirement is not impacted by the current version
## As an API user I want to limit the fields returned at the top level ([#206](https://github.com/NASA-PDS/pds-registry-app/issues/206)) 


This requirement is not impacted by the current version
# publish-artifacts

## The service shall accept metadata for a registered artifact in a defined format ([#75](https://github.com/NASA-PDS/pds-registry-app/issues/75)) 


This requirement is not impacted by the current version
## The service shall validate metadata for a registered artifact ([#74](https://github.com/NASA-PDS/pds-registry-app/issues/74)) 


This requirement is not impacted by the current version
## The service shall require a logical identifier and version be provided for all registered artifacts ([#73](https://github.com/NASA-PDS/pds-registry-app/issues/73)) 


This requirement is not impacted by the current version
## The service shall store metadata for a registered artifact in an underlying metadata store ([#72](https://github.com/NASA-PDS/pds-registry-app/issues/72)) 


This requirement is not impacted by the current version
# manage-artifacts

## The service shall allow updates to registered artifacts ([#71](https://github.com/NASA-PDS/pds-registry-app/issues/71)) 


This requirement is not impacted by the current version
## The service shall allow deletion of registered artifacts ([#70](https://github.com/NASA-PDS/pds-registry-app/issues/70)) 


This requirement is not impacted by the current version
# quality

## The service shall enable replication of registry contents with another instance of the service ([#69](https://github.com/NASA-PDS/pds-registry-app/issues/69)) 


This requirement is not impacted by the current version
## The service shall require checksums as metadata for registry artifact to enable system-wide integrity checking ([#68](https://github.com/NASA-PDS/pds-registry-app/issues/68)) 


This requirement is not impacted by the current version
# generate-metrics

## The service shall require a subset of file system metadata in order to support data metrics generation ([#67](https://github.com/NASA-PDS/pds-registry-app/issues/67)) 


This requirement is not impacted by the current version
# authorization

## The service shall require user authorization for updating registry metadata ([#66](https://github.com/NASA-PDS/pds-registry-app/issues/66)) 


This requirement is not impacted by the current version